@@ -16,6 +16,7 @@ import java.util.List;
 import java.util.Optional;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.mockito.Mockito.*;
 
 class DebtControllerTest {
@@ -65,6 +66,15 @@ class DebtControllerTest {
     }
 
     @Test
+    void testFindAllDebtsServiceException() {
+        when(debtService.findAllDebts()).thenThrow(new ServiceException("Service exception"));
+
+        ResponseEntity<?> response = debtController.findAllDebts();
+        assertEquals(HttpStatus.INTERNAL_SERVER_ERROR, response.getStatusCode());
+        verify(debtService, times(1)).findAllDebts();
+    }
+
+    @Test
     void testDeleteDebtById() {
         doNothing().when(debtService).deleteDebtById(anyLong());
 
@@ -75,7 +85,7 @@ class DebtControllerTest {
     }
     @Test
     void testFindDebtsByLender() {
-        List<Debt> expectedDebts = Arrays.asList(new Debt());
+        List<Debt> expectedDebts = List.of(new Debt());
         when(debtService.findDebtsByLender(anyLong())).thenReturn(expectedDebts);
 
         ResponseEntity<?> response = debtController.findDebtsByLender(1L);
@@ -83,10 +93,25 @@ class DebtControllerTest {
         assertEquals(HttpStatus.OK, response.getStatusCode());
         assertEquals(expectedDebts, response.getBody());
     }
+    @Test
+    void testFindDebtsByLenderServiceException() {
+        when(debtService.findDebtsByLender(anyLong())).thenThrow(new ServiceException("Service exception"));
+
+        ResponseEntity<?> response = debtController.findDebtsByLender(1L);
+
+        assertEquals(HttpStatus.BAD_REQUEST, response.getStatusCode());
+        verify(debtService).findDebtsByLender(1L);
+    }
+
+    @Test
+    void testFindDebtsByLenderIllegalArgumentException() {
+        when(debtService.findDebtsByLender(anyLong())).thenThrow(new IllegalArgumentException("Invalid ID"));
+        assertThrows(IllegalArgumentException.class, () -> debtService.findDebtsByLender(anyLong()));
+    }
 
     @Test
     void testFindDebtsByDebtor() {
-        List<Debt> expectedDebts = Arrays.asList(new Debt());
+        List<Debt> expectedDebts = List.of(new Debt());
         when(debtService.findDebtsByDebtor(anyLong())).thenReturn(expectedDebts);
 
         ResponseEntity<?> response = debtController.findDebtsByDebtor(1L);
@@ -96,8 +121,24 @@ class DebtControllerTest {
     }
 
     @Test
+    void testFindDebtsByDebtorServiceException() {
+        when(debtService.findDebtsByDebtor(anyLong())).thenThrow(new ServiceException("Service exception"));
+
+        ResponseEntity<?> response = debtController.findDebtsByDebtor(1L);
+
+        assertEquals(HttpStatus.BAD_REQUEST, response.getStatusCode());
+        verify(debtService).findDebtsByDebtor(1L);
+    }
+
+    @Test
+    void testFindDebtsByDebtorIllegalArgumentException() {
+        when(debtService.findDebtsByDebtor(anyLong())).thenThrow(new IllegalArgumentException("Invalid ID"));
+        assertThrows(IllegalArgumentException.class, () -> debtService.findDebtsByDebtor(anyLong()));
+    }
+
+    @Test
     void testFindDebtsByCollectivity() {
-        List<Debt> expectedDebts = Arrays.asList(new Debt());
+        List<Debt> expectedDebts = List.of(new Debt());
         when(debtService.findDebtsByCollectivity(anyBoolean())).thenReturn(expectedDebts);
 
         ResponseEntity<?> response = debtController.findDebtsByCollectivity(true);
@@ -107,8 +148,24 @@ class DebtControllerTest {
     }
 
     @Test
+    void testFindDebtsByCollectivityServiceException() {
+        when(debtService.findDebtsByCollectivity(anyBoolean())).thenThrow(new ServiceException("Service exception"));
+
+        ResponseEntity<?> response = debtController.findDebtsByCollectivity(anyBoolean());
+
+        assertEquals(HttpStatus.INTERNAL_SERVER_ERROR, response.getStatusCode());
+        verify(debtService).findDebtsByCollectivity(anyBoolean());
+    }
+
+    @Test
+    void testFindDebtsByCollectivityIllegalArgumentException() {
+        when(debtService.findDebtsByCollectivity(anyBoolean())).thenThrow(new IllegalArgumentException("Invalid"));
+        assertThrows(IllegalArgumentException.class, () -> debtService.findDebtsByCollectivity(anyBoolean()));
+    }
+
+    @Test
     void testFindDebtsThroughDescription() {
-        List<Debt> expectedDebts = Arrays.asList(new Debt());
+        List<Debt> expectedDebts = List.of(new Debt());
         when(debtService.findDebtsThroughDescription(anyString())).thenReturn(expectedDebts);
 
         ResponseEntity<?> response = debtController.findDebtsThroughDescription("description");
@@ -116,10 +173,25 @@ class DebtControllerTest {
         assertEquals(HttpStatus.OK, response.getStatusCode());
         assertEquals(expectedDebts, response.getBody());
     }
+    @Test
+    void testFindDebtsThroughDescriptionException() {
+        when(debtService.findDebtsThroughDescription(anyString())).thenThrow(new ServiceException("Service exception"));
+
+        ResponseEntity<?> response = debtController.findDebtsThroughDescription(anyString());
+
+        assertEquals(HttpStatus.BAD_REQUEST, response.getStatusCode());
+        verify(debtService).findDebtsThroughDescription(anyString());
+    }
+
+    @Test
+    void testFindDebtsThroughDescriptionIllegalArgumentException() {
+        when(debtService.findDebtsThroughDescription(anyString())).thenThrow(new IllegalArgumentException("Invalid"));
+        assertThrows(IllegalArgumentException.class, () -> debtService.findDebtsThroughDescription(anyString()));
+    }
 
     @Test
     void testFindCostlierDebts() {
-        List<Debt> expectedDebts = Arrays.asList(new Debt());
+        List<Debt> expectedDebts = List.of(new Debt());
         when(debtService.findCostlierDebts(anyDouble())).thenReturn(expectedDebts);
 
         ResponseEntity<?> response = debtController.findCostlierDebts(100.0);
@@ -129,14 +201,46 @@ class DebtControllerTest {
     }
 
     @Test
+    void testFindCostlierDebtsException() {
+        when(debtService.findCostlierDebts(anyDouble())).thenThrow(new ServiceException("Service exception"));
+
+        ResponseEntity<?> response = debtController.findCostlierDebts(anyDouble());
+
+        assertEquals(HttpStatus.BAD_REQUEST, response.getStatusCode());
+        verify(debtService).findCostlierDebts(anyDouble());
+    }
+
+    @Test
+    void testFindCostlierDebtsIllegalArgumentException() {
+        when(debtService.findCostlierDebts(anyDouble())).thenThrow(new IllegalArgumentException("Invalid"));
+        assertThrows(IllegalArgumentException.class, () -> debtService.findCostlierDebts(anyDouble()));
+    }
+
+    @Test
     void testFindCheaperDebts() {
-        List<Debt> expectedDebts = Arrays.asList(new Debt());
+        List<Debt> expectedDebts = List.of(new Debt());
         when(debtService.findCheaperDebts(anyDouble())).thenReturn(expectedDebts);
 
         ResponseEntity<?> response = debtController.findCheaperDebts(50.0);
 
         assertEquals(HttpStatus.OK, response.getStatusCode());
         assertEquals(expectedDebts, response.getBody());
+    }
+
+    @Test
+    void testFindCheaperDebtsException() {
+        when(debtService.findCheaperDebts(anyDouble())).thenThrow(new ServiceException("Service exception"));
+
+        ResponseEntity<?> response = debtController.findCheaperDebts(anyDouble());
+
+        assertEquals(HttpStatus.BAD_REQUEST, response.getStatusCode());
+        verify(debtService).findCheaperDebts(anyDouble());
+    }
+
+    @Test
+    void testFindCheaperDebtsIllegalArgumentException() {
+        when(debtService.findCheaperDebts(anyDouble())).thenThrow(new IllegalArgumentException("Invalid"));
+        assertThrows(IllegalArgumentException.class, () -> debtService.findCheaperDebts(anyDouble()));
     }
     @Test
     void testFindDebtByIdNotFound() {
@@ -209,7 +313,4 @@ class DebtControllerTest {
         assertEquals(HttpStatus.INTERNAL_SERVER_ERROR, response.getStatusCode());
         assertEquals("Failed to delete debt: Database error", response.getBody());
     }
-
-
-
 }
